--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <a class="fitted item"><i class="search icon"></i> </a>
     <a class="fitted item"><i class="user icon"></i> </a>
     <div class="ui dropdown fitted item">
-      <div class="text">MY CART <i class="shopping cart icon"></i> 0 </div>
+      <div class="text">MY CART <i class="shopping cart icon"></i> 0</div>
       <i class="dropdown icon"></i>
       <div class="menu">
         <div class="item">My cart is currently empty.</div>
@@ -33,6 +33,45 @@
     </div>
   </div>
 </div>
+
+<img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/files/logoshort_800x.png?v=1543956749"
+     alt="Island Snow Hawaii" itemprop="logo">
+
+<div class="ui borderless middlemenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">Tank tops</div>
+        <div class="item">Shirts</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">My cart is currently empty.</div>
+      </div>
+    </div>
+
+    <a class=" item">KIDS</a>
+
+    <div class="ui dropdown item">
+      <div class="text">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">My cart is currently empty.</div>
+      </div>
+    </div>
+
+    <a class=" item">SEARCH</a>
+
+  </div>
+</div>
+
+<img class="ui fluid image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?9243197903709543590">
 
 <script>
   $('.ui.dropdown')
