--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 1st: DNF
-2nd: 13:33
+2nd: 11:24
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -99,7 +99,11 @@
       <div class="ui list">
         <div class="item">Sign up for the latest updates</div>
         <div class="ui labeled input">
-        <div class="ui label">
+          <input type="text" placeholder="Enter email address">
+          <div class="ui black label">
+            Join
+          </div>
+        </div>
       </div>
     </div>
   </div>
